--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon app.js",
     "start": "node app.js"
   },
-  "author": "",
+  "author": "NataPo",
   "license": "ISC",
   "description": "",
   "devDependencies": {
